syntax = "proto3";

package proto;

option go_package = "github.com/n3xem/proxiff/plugin/proto";

// ComparatorPlugin defines the gRPC service for comparing HTTP responses
service ComparatorPlugin {
  // Compare compares two HTTP responses and returns the result
  rpc Compare(CompareRequest) returns (CompareResponse);
}

// HTTPResponse represents an HTTP response
message HTTPResponse {
  int32 status_code = 1;
  map<string, HeaderValues> headers = 2;
  bytes body = 3;
}

// HeaderValues represents multiple values for a single header
message HeaderValues {
  repeated string values = 1;
}

// CompareRequest contains the two responses to compare
message CompareRequest {
  HTTPResponse newer = 1;
  HTTPResponse current = 2;
}

// CompareResponse contains the comparison result
message CompareResponse {
  bool match = 1;
  string difference = 2;
}
